--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,10 +12,14 @@ jobs:
         with:
           fetch-depth: 2
 
+      - name: Install lftp
+        run: sudo apt-get update && sudo apt-get install -y lftp
+        
       - name: Clean up server
         run: |
           lftp -u ${{ secrets.FTP_USERNAME }},${{ secrets.FTP_PASSWORD }} ${{ secrets.FTP_SERVER }} -e "
-          mirror --delete-first --reverse --verbose ./ /public_html/; quit"
+          mirror --delete-first --reverse --verbose ./ /home/nscet/nscet.org/hackathon/; quit"
+        shell: /usr/bin/bash -e {0}
 
       - name: FTP-Deploy-Action
         uses: SamKirkland/FTP-Deploy-Action@4.3.0
@@ -23,3 +27,5 @@ jobs:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
+          local-dir: ./
+          remote-dir: /home/nscet/nscet.org/hackathon/
